tests/ui/macros/global-asm.stderr
error: requires at least a template string argument
  --> $DIR/global-asm.rs:4:5
   |
LL |     global_asm!();
   |     ^^^^^^^^^^^^^

error: expected expression, found keyword `struct`
  --> $DIR/global-asm.rs:5:17
   |
LL |     global_asm!(struct);
   |                 ^^^^^^ expected expression

error: asm template must be a string literal
  --> $DIR/global-asm.rs:6:17
   |
LL |     global_asm!(123);
   |                 ^^^

error: aborting due to 3 previous errors

